deployment-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: __JOB_NAME__-svc
spec:
  type: ClusterIP
  selector:
    app: __JOB_NAME__
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: __JOB_NAME__
  name: __JOB_NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __JOB_NAME__
  template:
    metadata:
      labels:
        app: __JOB_NAME__
    spec:
      containers:
        - image: vactory/php-fpm-nginx:1.0.1
          name: __JOB_NAME__
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __JOB_NAME__-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: __SUB_DOMAIN__.k8s.lapreprod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __JOB_NAME__-svc
                port:
                  number: 8080
