v8-deployment-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: __JOB_NAME__-d8-svc
spec:
  type: ClusterIP
  selector:
    app: __JOB_NAME__-d8-drupal
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: __JOB_NAME__-d8-db-svc
spec:
  type: ClusterIP
  selector:
    app: __JOB_NAME__-d8-db
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: __JOB_NAME__-d8-pma-svc
spec:
  type: ClusterIP
  selector:
    app: __JOB_NAME__-d8-pma
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: __JOB_NAME__-d8-drupal
  name: __JOB_NAME__-d8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __JOB_NAME__-d8-drupal
  template:
    metadata:
      labels:
        app: __JOB_NAME__-d8-drupal
    spec:
      containers:
        - image: vactory/vactory8:1.0.0
          name: __JOB_NAME__-d8
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: __JOB_NAME__-d8
              mountPath: /var/www/html/sites/default/files
      volumes:
        - name: __JOB_NAME__-d8
          persistentVolumeClaim:
            claimName: __JOB_NAME__-d8-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __JOB_NAME__-d8-db
  labels:
    app: __JOB_NAME__-d8-db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: __JOB_NAME__-d8-db
  template:
    metadata:
      labels:
        app: __JOB_NAME__-d8-db
    spec:
      containers:
        - image: mariadb:latest
          name: __JOB_NAME__-d8-db
          ports:
            - containerPort: 3306
              name: __JOB_NAME__-d8-db
          volumeMounts:
            - name: __JOB_NAME__-d8-db
              mountPath: /var/lib/mysql
      volumes:
        - name: __JOB_NAME__-d8-db
          persistentVolumeClaim:
            claimName: __JOB_NAME__-d8-claim-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __JOB_NAME__-d8-pma
  labels:
    app: __JOB_NAME__-d8-pma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __JOB_NAME__-d8-pma
  template:
    metadata:
      labels:
        app: __JOB_NAME__-d8-pma
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin
          name: __JOB_NAME__-d8-pma
          ports:
            - containerPort: 80
              name: __JOB_NAME__-d8-pma
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __JOB_NAME__-d8-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirectscheme@kubernetescrd
spec:
  rules:
    - host: void-d8.k8s.lapreprod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __JOB_NAME__-d8-svc
                port:
                  number: 8080
    - host: phpmyadmin.void-d8.k8s.lapreprod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __JOB_NAME__-d8-pma-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __JOB_NAME__-d8-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: __SUB_DOMAIN__.k8s.lapreprod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __JOB_NAME__-d8-svc
                port:
                  number: 8080
    - host: phpmyadmin.__SUB_DOMAIN__.k8s.lapreprod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __JOB_NAME__-d8-pma-svc
                port:
                  number: 80
